# gamebrain-api-clients

./: .gitignore  README.md  gamebrain-openapi.yaml  java-config.json  package-lock.json
.42c/: conf.yaml
.github/workflows/: postman-collection.yml
android/: README.md  build.gradle  git_push.sh  pom.xml
android/.openapi-generator/: FILES
angular/: git_push.sh
clojure/: git_push.sh  project.clj
cpp/: README.md
cpp/client/: CMakeLists.txt  OAIDefaultApi.cpp  OAIDefaultApi.h  OAIEnum.h  OAIGameNewsItem.cpp  OAIGameNewsItem.h  OAIGameNewsResponse.cpp  OAIGameNewsResponse.h  OAIGameResponse.cpp  OAIGameResponse.h  OAIGameResponse_offers_inner.cpp  OAIGameResponse_offers_inner.h  OAIGameResponse_offers_inner_price.cpp  OAIGameResponse_offers_inner_price.h  OAIGameResponse_official_stores_inner.cpp  OAIGameResponse_official_stores_inner.h  OAIGameResponse_platforms_inner.cpp  OAIGameResponse_platforms_inner.h  OAIGameResponse_playtime.cpp  OAIGameResponse_playtime.h  OAIGameResponse_rating.cpp  OAIGameResponse_rating.h  OAIHelpers.cpp  OAIHelpers.h  OAIHttpFileElement.cpp  OAIHttpFileElement.h  OAIHttpRequest.cpp  OAIHttpRequest.h  OAIOauth.h  OAIObject.h  OAISearchResponse.cpp  OAISearchResponse.h  OAISearchResponse_active_filter_options_inner.cpp  OAISearchResponse_active_filter_options_inner.h  OAISearchResponse_active_filter_options_inner_values_inner.cpp  OAISearchResponse_active_filter_options_inner_values_inner.h  OAISearchResponse_filter_options_inner.cpp  OAISearchResponse_filter_options_inner.h  OAISearchResponse_filter_options_inner_values_inner.cpp  OAISearchResponse_filter_options_inner_values_inner.h  (+17 more)
csharp/: README.md  appveyor.yml  gamebrain.sln  git_push.sh
dart/: README.md  git_push.sh
elixir/: README.md  mix.exs
elm/: README.md
erlang/: rebar.config
go/: README.md  api_default.go  client.go  configuration.go  git_push.sh  go.mod  model_game_news_item.go  model_game_news_response.go  model_game_response.go  model_game_response_offers_inner.go  model_game_response_offers_inner_price.go  model_game_response_official_stores_inner.go  model_game_response_platforms_inner.go  model_game_response_playtime.go  model_game_response_rating.go  model_search_response.go  model_search_response_active_filter_options_inner.go  model_search_response_active_filter_options_inner_values_inner.go  model_search_response_filter_options_inner.go  model_search_response_filter_options_inner_values_inner.go  model_search_response_results_inner.go  model_search_response_results_inner_rating.go  model_search_response_sorting.go  model_search_response_sorting_options_inner.go  model_search_suggestion_response.go  model_search_suggestion_response_results_inner.go  model_similar_games_response.go  response.go  utils.go
haskell/: README.md  gamebrain.cabal  git_push.sh  openapi.yaml
java/: README.md  build.gradle  build.sbt  git_push.sh  pom.xml
javascript/: README.md  git_push.sh  package-lock.json  package.json
kotlin/: README.md  build.gradle
lua/: gamebrain-1.0.0.rockspec  gamebrain-1.0.1.rockspec  gamebrain-1.0.2.rockspec  git_push.sh
perl/: README.md  git_push.sh
php/: README.md  composer.json  git_push.sh
python/: .gitlab-ci.yml  .travis.yml  README.md  git_push.sh  pyproject.toml  setup.py  tox.ini
ruby/: README.md  git_push.sh  openapi_client.gemspec
rust/: Cargo.toml  README.md  git_push.sh
typescript/: DefaultApi.md  git_push.sh  package.json  servers.ts
(+1011 files in other folders)
